style.css
:root {
    --light_orange: #F7AB3C;
    --medium_orange: #F1811C;
    --medium_orange_trans: #f17f1c81;
    --dark_orange: #EE6B21;
    --almost_white: #F3F3F3;
    --not_black: #252525;
    --nice_purple: #811CF1;
}

/* smooth scroll */
html {
    scroll-behavior: smooth;
  }

  @media screen and (prefers-reduced-motion: reduce) {
	html {
		scroll-behavior: smooth;
	}
}


/* scrollbar */

body::-webkit-scrollbar {
    width: 0.25vw;
    background-color: var(--not_black);
}
 
 
body::-webkit-scrollbar-thumb {
    background-color: var(--light_orange);
    border-radius: 10px;
}


/* fonts */

.brevia_bold {
    font-family: brevia, sans-serif;
    font-weight: 700;
    font-style: normal;
}

.rubik_regular {
    font-family: rubik, sans-serif;
    font-weight: 400;
    font-style: normal;
}

.rubik_light {
    font-family: rubik, sans-serif;
    font-weight: 300;
    font-style: normal;
}

a {
    text-decoration: none;
    color: var(--dark_orange);
}

/* --- */

/* general stuff */

.mousepointer {
    cursor: pointer;
}

html, body {
    background-color: var(--almost_white);
    position: absolute;
    margin: 0;
    width: 100%;
}

.content_wrapper {
    position: relative;
    overflow: hidden;
    box-sizing: border-box;
    top: 100%;
    width: 86vw;
    height: fit-content;
    left: 7vw;
}

/* --- */

/* header */

header {
    display: flex;
    justify-content: space-between;
    padding-bottom: 13vh;
    padding-top: 4vh;
}

.logo_wrapper {
    display: block;
    width: fit-content;
    position: relative;
}

.logo_image {
    position: relative;
    padding-right: 3px;
}
.logo img {
    width: 1vw;
}

.logo span {
    font-size: 1.2vw;
}

.header_menu {
    position: relative;
    float: right;
}

.menu_item {
    padding-right: 45px;
    color: var(--dark_orange);
    box-shadow: 0 0 0;
    transition: all 500ms;
}

.menu_item:hover {
    color: var(--light_orange);
    text-shadow: 0 0 20px var(--medium_orange_trans);
    transition: all 250ms;
}
.menu_item:last-child {
    padding-right: 0;
}
/* --- */

/* Page1 */

#page1 {
    display: flex;
    justify-content: space-between;
    position: relative;
    max-width: 90vw;
    height: fit-content;
    overflow: visible;
}

.page1_leftside {
    display: block;
    position: relative;
    max-width: 15vw;
    height: fit-content;
}

.big_h1 {
    font-size: 3vw;
}

.intro_p {
    margin-top: 1vh;
    font-size: 1vw;
    color: #ABABAB;
}

.btn-primary{
    position: relative;
    background: linear-gradient(90deg, var(--medium_orange) 0%, var(--light_orange) 100%);
    box-shadow: 0 0 25px var(--medium_orange_trans);
    border: none;
    border-radius: 40px;
    padding-left: 3vw;
    padding-right: 3vw;
    padding-top: 0.5vw;
    padding-bottom: 0.5vw;
    transition: all 250ms;
    margin-top: 1vh;
}

.btn-primary:hover {
    background: linear-gradient(90deg, var(--light_orange) 0%, var(--light_orange) 100%);
    box-shadow: 0 5px 25px var(--medium_orange);
    transition: all 500ms;
}

.btn-primary:focus {
    background-color: var(--light_orange);
    outline: none;
}

.btn-primary a {
    color: var(--almost_white);
    font-size: 1vw;
}


/* picture stuff */

.picture_wrapper {
    position: relative;
    float: right;
    position: relative;
    min-width: 25vw;
    min-height: 25vw;
}

.picture, .blob {
    position: absolute;
    width: 15vw;
    top: 0;
    right: 0;
}

.picture {
    right: 5vw;
    z-index: 2;
}


.blob {
    top: 10vh;
    z-index: 1;
}


.wave  {
    position: relative;
    left: 0;
    width: 100%;
    z-index: -1;
    overflow: visible;
}

.wave_black {
    transform: translateY(5%);
    fill: var(--not_black) !important;
    z-index: 0;
}

.wave_purple {
    transform: translateY(10%);
    fill: var(--nice_purple) !important;
    z-index: 0;
}

/* page1 spacer*/

#page1 {
    min-height: fit-content;
}

#scroll_here {
    position: absolute;
    top: 104vh;
    left: 50vw;
    width: 200px;
    height: 100px;
}

/* --- */

#lower_content {
    position: relative;
    width: 100%;
    background-color: var(--not_black);
    overflow: hidden;
}

/* page 2*/

.pages {
    overflow: visible;
}
.artwork {
    position: relative;
}

.page2_artwork {
    display: none;
}

.artwork img {
    width: 22vw;
}

.pages:last-child {
    padding-bottom: 5vh;
}


.pages_header {
    position: relative;
    color: var(--almost_white);
    font-size: 2rem;
    margin-top: 1vh;
    margin-bottom: 1vh;
    text-align: center;
}

.fancy_spacer {
    position: relative;
    margin-top: 2vh;
    width: 50vw;
    height: 1vh;
    background: linear-gradient(90deg, rgba(241,129,28,1) 0%, rgba(247,171,60,1) 100%);
    border-radius: 15vw;
    left: 50%;
    transform: translateX(-50%);
    box-shadow: 0 20px 50px var(--medium_orange_trans);
}

.parahraph_wrapper {
    position: relative;
    margin-top: 6vh;
    max-width: 50%;
    left: 50%;
    transform: translateX(-50%);
}

.block_text {
    color: var(--almost_white);
    font-size: 1rem;
    text-align: center;
}

.expand_text {
    left: 50%;
    text-align: center;
    position: relative;
    font-size: 0.75rem;
    color: var(--medium_orange);
    margin-top: 10vh;
    transform: translateX(-50%) !important;
    transition: 500ms all;
    text-shadow: 0 0 0;
}

.expand_text:hover {
    color: var(--light_orange);
    text-shadow: 0 0 10px var(--medium_orange);
    transition: 250ms all;
}

/* --- */

/* page3 */

#purple_wall {
    background-color: var(--nice_purple);
}

/* --- */

/* page4 */

.wave_black2 {
    transform: translateY(3%);
    z-index: 0;
    fill: var(--not_black);
}

.btn_contact {
    margin-top: 5vh;
    left: 50%;
    transform: translateX(-50%);
}

.btn_contact a {
    top: 50%
}

#page4 {
    margin-bottom: 5vh;
}

.page4_artwork img {
    margin-top: 15vh;
    position: relative;
    left: 50%;
    transform: translateX(-50%);
    width: 5vw;
}


/* footer*/

footer {
    background-color: var(--not_black);
}

.footer_inner {
    display: flex;
    justify-content: space-between;
    position: relative;
    left: 3vw;
    width: 92vw;
    padding-bottom: 15px;
}

.social_media_icon {
    font-size: 1vw;
    padding-right: 15px;
}

.social_media_icon:last-child {
    padding-right: 0;
}

.fab {
    color: var(--almost_white);
    box-shadow: 0 0 0;
    transition: all 750ms;
}
.fab:hover {
    color: var(--medium_orange);
    box-shadow: 0 0 10px var(--medium_orange_trans);
    transition: all 250ms;
}
footer span {
    color: var(--almost_white);
}

/* --- */

@media screen and (max-width: 1000px) {
    .page4_artwork img {
        margin-top: 5vh;
        width: 20vw;
    }
    header {
        padding-bottom: 4vh;
    }
    .header_menu {
        visibility: hidden;
    }
    .logo span {
        display: none;
    }
    .logo img {
        width: 2vw;
    }
    .page1_leftside {
        max-width: 100%;
        height: fit-content;
        left: 50%;
        text-align: center;
        transform: translateX(-50%);
    }
    .btn-primary{
        border-radius: 40px;
        padding-left: 9.75vw;
        padding-right: 9.75vw;
        padding-top: 2.3vw;
        padding-bottom: 2.3vw;
        margin-top: 1vh;
    }
    .btn-primary a {
        font-size: 4vw;
    }
    .btn_contact {
        margin-top: 5vh;
        left: 50%;
        transform: translateX(-50%);
        border-radius: 40px;
        padding-left: 4.75vw;
        padding-right: 4.75vw;
        padding-top: 1.3vw;
        padding-bottom: 1.3vw;
        margin-top: 1vh;
    }
    .picture_wrapper{
        display: none;
    }
    .page1_leftside {
        max-width: 60%;
    }
    .big_h1 {
        font-size: 6vw;
    }
    .intro_p {
        font-size: 4vw;
   }
}

@media screen and (max-width: 800px) {
    .wave_purple {
        transform: translateY(16%);
    }
    .wave_black2 {
        transform: translateY(10%);
    }
}

@media screen and (max-width: 500px) {
    .picture_wrapper{
        display: none;
    }
    .big_h1 {
        font-size: 9vw;
    }
    .intro_p {
        font-size: 6vw;
   }
   .wave_black {
    transform: translateY(8%);
}
}

@media screen and (max-width: 400px) {
    .wave_purple {
        transform: translateY(20%);
    }
    .wave_black2 {
        transform: translateY(15%);
    }
}

